--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -41,7 +41,7 @@
                                 you the best prediction about your flight.</p>
                             <ul>
                                 <span class="page-direction-button">
-                                    <li><a href="aboutus"><i class="fa fa-book"></i>About Us</a></li>
+                                    <li><a href="index"><i class="fa fa-book"></i>Back</a></li>
                                 </span>
                                 <br>
                                 <span class="page-direction-button">
